--- a/views/Page0.ejs
+++ b/views/Page0.ejs
@@ -100,7 +100,7 @@
     </div>
     </div>
           <div class="row" style=" margin-left: 150px; ">
-          <div class="col-sm-6">
+          <div class="col-sm-4">
           <div class="card shadow text-center" style="width: 18rem;">
             <img src="https://i.ibb.co/09jBdqL/yayaya-1.png" />
               <h5 class="card-title">Application de gestion des médicaments</h5>
@@ -108,13 +108,20 @@
           </div>
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-sm-4">
           <div class="card shadow text-center" style="width: 18rem;">
             <img src="https://i.ibb.co/9yTn4cf/cuistec.png" alt="cuistec" border="0" style = "margin-top: 40px;">
               <h5 class="card-title" style = "margin-top: 5px;">Application de gestion de la cuisine hospitalière</h5>
               <a href="/Page2" class="btn btn-outline-success">accéder</a>
           </div>
           </div>
+          <div class="col-sm-4">
+            <div class="card shadow text-center" style="width: 18rem;">
+              <img src="https://i.ibb.co/9yTn4cf/cuistec.png" alt="cuistec" border="0" style = "margin-top: 40px;">
+                <h5 class="card-title" style = "margin-top: 5px;">Application de gestion de la cuisine de ayoub</h5>
+                <a href="/Page2" class="btn btn-outline-success">accéder</a>
+            </div>
+            </div>
 
          
        
