--- a/views/articles/register.ejs
+++ b/views/articles/register.ejs
@@ -64,9 +64,8 @@
                         <label for="exampleInputEmail1">Rôle</label>
                         <select id="role" name="role" class="form-control">
                           <option selected>Entrer Rôle</option>
-                          <option value="medecin">medecin</option>
-                          <option value="pharmacien">pharmacien</option>
-                          <option value="pharmacienP">pharmacien preparateur</option>
+                          
+                          <option value="employe">employé</option>
                           <option value="admin">Admin</option>
                         </select>
                        <!-- <input type="text" name="role" id="role"  class="form-control" aria-describedby="emailHelp" placeholder="Entrer Rôle">-->
