--- a/views/cuisConteneurs/_form_fields.ejs
+++ b/views/cuisConteneurs/_form_fields.ejs
@@ -1,31 +1,31 @@
 <div class="form-group">
     <label for="title">Nom</label>
-    <textarea required name="nomP" id="nomP" class="form-control"><%= cuisPatient.nomP %></textarea>
+    <textarea required name="nomP" id="nomP" class="form-control"><%= cuisConteneur.nomP %></textarea>
 </div>
 <div class="form-group">
     <label for="title">Prénom</label>
-    <textarea required name="prenomP" id="prenomP" class="form-control"><%= cuisPatient.prenomP %></textarea>
+    <textarea required name="prenomP" id="prenomP" class="form-control"><%= cuisConteneur.prenomP %></textarea>
 </div>
 <div class="form-group">
     <label for="title">Age</label>
-    <textarea required name="ageP" id="ageP" class="form-control"><%= cuisPatient.ageP %></textarea>
+    <textarea required name="ageP" id="ageP" class="form-control"><%= cuisConteneur.ageP %></textarea>
 </div>
 <div class="form-group">
     <label for="title">Sexe</label>
-    <textarea required name="sexeP" id="sexeP" class="form-control"><%= cuisPatient.sexeP %></textarea>
+    <textarea required name="sexeP" id="sexeP" class="form-control"><%= cuisConteneur.sexeP %></textarea>
 </div>
 <div class="form-group">
     <label for="title">CIN</label>
-    <textarea required name="CIN" id="CIN" class="form-control"><%= cuisPatient.CIN %></textarea>
+    <textarea required name="CIN" id="CIN" class="form-control"><%= cuisConteneur.CIN %></textarea>
 </div>
 <div class="form-group">
     <label for="title">Allergies par rapport à la nourriture</label>
-    <textarea name="Antecedents_Allergies" id="Antecedents_Allergies" class="form-control"><%= cuisPatient.Antecedents_Allergies %></textarea>
+    <textarea name="Antecedents_Allergies" id="Antecedents_Allergies" class="form-control"><%= cuisConteneur.Antecedents_Allergies %></textarea>
 </div>
 <div class="form-group">
     <label for="title">Service d'hospitalisation</label>
     <select id="service" name="service" class="form-control">
-        <option selected><%= cuisPatient.service %></option>
+        <option selected><%= cuisConteneur.service %></option>
         <option value="ORL">ORL</option>
         <option value="Cardiologie">Cardiologie</option>
         <option value="Endocrinologie">Endocrinologie</option>
@@ -35,7 +35,7 @@
         <option value="Réanimation">Réanimation</option>
         
       </select>
-    <!-- <textarea name="service" id="service" class="form-control"><%= cuisPatient.service %></textarea> -->
+    <!-- <textarea name="service" id="service" class="form-control"><%= cuisConteneur.service %></textarea> -->
 </div>
 <button type="submit" class="btn btn-primary">Enregistrer</button>
 <a href='/listePt/tout' class="btn btn-secondary">annuler</a>
