--- a/views/cuisConteneurs/edit.ejs
+++ b/views/cuisConteneurs/edit.ejs
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
       <h1 class="mb-4">Modifier patient</h1>
-      <form action="/cuisPatients/<%= cuisPatient.id%>?_method=PUT" method="POST">
+      <form action="/cuisConteneurs/<%= cuisConteneur.id%>?_method=PUT" method="POST">
         <%- include('_form_fields') %>
     </form>
   </div>
