--- a/views/cuisConteneurs/index.ejs
+++ b/views/cuisConteneurs/index.ejs
@@ -46,7 +46,7 @@
       </div>
     </nav>  
     
-    <h1 class="mb-4 text-center ">Fiche du patient</h1>
+    <h1 class="mb-4 text-center ">Fiche du conteneur</h1>
    
   <div class="row mb-4">
     <div class="col">
@@ -67,12 +67,12 @@
     </div>
     <div class="col">
       <form class="form-inline float-right">
-        <a href="/cuisPatients/new"  class="btn btn-success " >
+        <a href="/cuisConteneurs/new"  class="btn btn-success " >
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-plus mr-2" viewBox="0 0 16 16">
             <path d="M4 0h5.5v1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h1V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
             <path d="M9.5 3V0L14 4.5h-3A1.5 1.5 0 0 1 9.5 3z"/>
             <path fill-rule="evenodd" d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
-          </svg>Nouveau patient
+          </svg>Nouveau conteneur
         </a>
         <button type="button" class="btn btn-warning  ml-2 " data-toggle="modal" data-target="#myModal">
           Instructions recherche<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-question-circle ml-2" viewBox="0 0 16 16">
@@ -92,12 +92,12 @@
       
         <!-- Modal Header -->
         <div class="modal-header">
-          <h4 class="modal-title">Indication recherche patient</h4>
+          <h4 class="modal-title">Indication recherche conteneur</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <!-- Modal body -->
         <div class="modal-body text-dark">
-          Si vous voulez rechercher un patient, tapez dans la zone de recherche le ou les lettres constituant son "NOM", ou alors optez pour le radio boutton -tout- si vous voulez afficher la liste de tous les patients.
+          Si vous voulez rechercher un conteneur, tapez dans la zone de recherche le ou les lettres constituant son "NOM", ou alors optez pour le radio boutton -tout- si vous voulez afficher la liste de tous les conteneurs.
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
@@ -108,19 +108,19 @@
     </div>
     </div>
   
-    <% cuisPatients.forEach( cuisPatient => { %>
+    <% cuisConteneurs.forEach( cuisConteneur => { %>
         <div class="card mt-2 mb-4 w-50 text-center mx-auto shadow">
             <div class="card-body">
-               <h4 class="card-title">Nom patient : <%= cuisPatient.nomP %></h4> 
-               <div class="card-text mb-2">Prénom patient: <%= cuisPatient.prenomP %></div>
-               <div class="card-text mb-2">CIN: <%= cuisPatient.CIN %></div>
-               <div class="card-subtitle text-muted mb-2">Date création dossier: <%= cuisPatient.createdAt.toLocaleDateString() %></div>
-               <a href="/cuisPatients/<%= cuisPatient.id %>" class="btn btn-outline-primary">Plus d'infos<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle ml-2" viewBox="0 0 16 16">
+               <h4 class="card-title">Nom conteneur : <%= cuisConteneur.nomP %></h4> 
+               <div class="card-text mb-2">Prénom conteneur: <%= cuisConteneur.prenomP %></div>
+               <div class="card-text mb-2">CIN: <%= cuisConteneur.CIN %></div>
+               <div class="card-subtitle text-muted mb-2">Date création dossier: <%= cuisConteneur.createdAt.toLocaleDateString() %></div>
+               <a href="/cuisConteneurs/<%= cuisConteneur.id %>" class="btn btn-outline-primary">Plus d'infos<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle ml-2" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
                 <circle cx="8" cy="4.5" r="1"/>
               </svg></a>
-               <form action="/cuisPatients/<%= cuisPatient.id %>?_method=DELETE" method="POST" class="d-inline" >
+               <form action="/cuisConteneurs/<%= cuisConteneur.id %>?_method=DELETE" method="POST" class="d-inline" >
                  <button type="submit" class="btn btn-danger">Supprimer<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash ml-2" viewBox="0 0 16 16">
                   <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                   <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -134,7 +134,7 @@
   <nav aria-label="breadcrumb " style ="bottom : 1000px" >
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/liste2/tout">Espace Prescription</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste3/tout">Dossiers patient</a></li>
+      <li class="breadcrumb-item active" aria-current="page"><a href="/liste3/tout">Dossiers conteneur</a></li>
       <li class="breadcrumb-item active" aria-current="page"><a href="/liste/tout">Stock</a></li>
       <li class="breadcrumb-item active" aria-current="page"><a href="/liste4/tout">Livret thérapeutique</a></li>
       <li class="breadcrumb-item active" aria-current="page"><a href="/liste6/tout">Fournisseurs</a></li>
