--- a/views/cuisConteneurs/new.ejs
+++ b/views/cuisConteneurs/new.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="container">
-      <h1 class="mb-4">Nouveau patient</h1>
-      <form action="/cuisPatients" method="POST">
+      <h1 class="mb-4">Nouveau conteneur</h1>
+      <form action="/cuisConteneurs" method="POST">
         <%- include('_form_fields') %>
     </form>
   </div>
