--- a/views/Page2.ejs
+++ b/views/Page2.ejs
@@ -36,7 +36,7 @@
 }
 </style>
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-     <title>DAWA - Pharmacie Hospitalière</title>
+     <title>GESTIOJN DES DECHETS</title>
 </head>
 <body style="background-color: #EBF2F8; padding-top: 130px; ">
  
