--- a/views/articles/login.ejs
+++ b/views/articles/login.ejs
@@ -17,169 +17,366 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
      <style>
-       body{
-    margin-top:20px;
-    background: #f6f9fc;
-}
-.bg {
-  /* The image used */
-  /*background-color:#4bdeb4;*/
-  /*background-color:#03224c;*/
+     
 
-  /* Full height */
+/* Please ❤ this if you like it! */
+
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
+body{
+	font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 1.7;
+	color: #001b48;
+	background-color: #d6e8ee;
+	overflow-x: hidden;
+}
+a {
+	cursor: pointer;
+  transition: all 200ms linear;
+}
+a:hover {
+	text-decoration: none;
+}
+.link {
+  color: #c4c3ca;
+}
+.link:hover {
+  color: #ffeba7;
+}
+p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.7;
+}
+h4 {
+  font-weight: 600;
+}
+h6 span{
+  padding: 0 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.section{
+  position: relative;
+  width: 100%;
+  display: block;
+}
+.full-height{
+  min-height: 100vh;
+}
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked){
+  position: absolute;
+  left: -9999px;
+}
+.checkbox:checked + label,
+.checkbox:not(:checked) + label{
+  position: relative;
+  display: block;
+  text-align: center;
+  width: 60px;
+  height: 16px;
+  border-radius: 8px;
+  padding: 0;
+  margin: 10px auto;
+  cursor: pointer;
+  background-color: #ffeba7;
+}
+.checkbox:checked + label:before,
+.checkbox:not(:checked) + label:before{
+  position: absolute;
+  display: block;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  color: #ffeba7;
+  background-color: #001b48;
+  font-family: 'unicons';
+  content: '\eb4f';
+  z-index: 20;
+  top: -10px;
+  left: -10px;
+  line-height: 36px;
+  text-align: center;
+  font-size: 24px;
+  transition: all 0.5s ease;
+}
+.checkbox:checked + label:before {
+  transform: translateX(44px) rotate(-270deg);
+}
+
+
+.card-3d-wrap {
+  position: relative;
+  width: 440px;
+  max-width: 100%;
+  height: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  perspective: 800px;
+  margin-top: 60px;
+}
+.card-3d-wrapper {
+  width: 100%;
   height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
+  position:absolute;    
+  top: 0;
+  left: 0;  
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: all 600ms ease-out; 
+}
+.card-front, .card-back {
+  width: 100%;
+  height: 100%;
+  background-color: #001b48;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
+  background-position: bottom center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 300%;
+  position: absolute;
+  border-radius: 6px;
+  left: 0;
+  top: 0;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
-.account-block {
+.card-back {
+  transform: rotateY(180deg);
+}
+.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
+  transform: rotateY(180deg);
+}
+.center-wrap{
+  position: absolute;
+  width: 100%;
+  padding: 0 35px;
+  top: 50%;
+  left: 0;
+  transform: translate3d(0, -50%, 35px) perspective(100px);
+  z-index: 20;
+  display: block;
+}
+
+
+.form-group{ 
+  position: relative;
+  display: block;
+    margin: 0;
     padding: 0;
-    /*background-color:#4bdeb4;*/
-    /*background-color:#03224c;*/
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    position: relative;
 }
-.account-block .overlay {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.4);
+.form-style {
+  padding: 13px 20px;
+  padding-left: 55px;
+  height: 48px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #d6e8ee;
+  background-color: #02457a;
+  border: none;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.account-block .account-testimonial {
-    text-align: center;
-    color: #fff;
-    position: absolute;
-    margin: 0 auto;
-    padding: 0 1.75rem;
-    bottom: 3rem;
-    left: 0;
-    right: 0;
+.form-style:focus,
+.form-style:active {
+  border: none;
+  outline: none;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+.input-icon {
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 48px;
+  font-size: 24px;
+  line-height: 48px;
+  text-align: left;
+  color: #ffeba7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
 
-.text-theme {
-    color: #707280 !important;
+.form-group input:-ms-input-placeholder  {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input::-moz-placeholder  {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input:-moz-placeholder  {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input::-webkit-input-placeholder  {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input:focus:-ms-input-placeholder  {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input:focus::-moz-placeholder  {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input:focus:-moz-placeholder  {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+.form-group input:focus::-webkit-input-placeholder  {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
 
-.btn-theme {
-    background-color: #5369f8;
-    border-color: #5369f8;
-    color: #fff;
+.btn{  
+  border-radius: 4px;
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #d5e8ee;
+  color: #102770;
+  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+}
+.btn:active,
+.btn:focus{  
+  background-color: #102770;
+  color: #ffeba7;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+.btn:hover{  
+  background-color: #97cadb;
+  color: #001b48;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+
+
+
+
+.logo {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	display: block;
+	z-index: 100;
+	transition: all 250ms linear;
+}
+.logo img {
+	height: 26px;
+	width: auto;
+	display: block;
 }
      </style>
     <link rel="icon" href="http://sendpictures.free.fr/up/1608041829.ico" />
-    <title>DAWA - Pharmacie Hospitalière</title>
+    <title>DAWA - GESTION DES DECHETS</title>
 </head>
 <body class="bg">
  
-    <!-- The Modal -->
-  <div class="modal" id="myModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-      
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Conditions d'utilisation</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <!-- Modal body -->
-        <div class="modal-body text-dark">
-          DAWA tient en compte lors de l'utilisation des espaces proposés des droits d'accés de chaque session. Ainsi, le médecin, pharmacien et pharmacien préparateur auront des droits d'accés différents selon leur profession. De plus, veuillez prêtez attention à l'insertion et à la manipulation des bases de données médicamenteuses car une faute pourrait s'avérer contraignante pour le patient.
-        </div>
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Lu et approuvé.</button>
-        </div>
-        
-      </div>
-    </div>
-    </div>
+	<a href="#" class="logo" target="_blank">
+		<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+	</a>
 
-
-    <div>
-      <div id="main-wrapper" class="container">
-      <div class="row justify-content-center">
-          <div class="col-xl">
-              <div class="card border-0">
-                  <div class="card-body p-0">
-                      <div class="row no-gutters">
-                          <div class="col-lg-6">
-                              <div class="p-5">
-                                  <div class="mb-5">
-                                      <h3 class="h4 font-weight-bold text-theme">Connexion</h3>
-                                  </div>
-                                     
-                                  <h6 class="h5 mb-0">Bonjour!</h6>
-                                  <p class="text-muted mt-2 mb-5">Veuillez saisir votre identifient et mot de passe pour vous connectez.</p>
-  
-                                  <form action="/" method = "POST" name="login">
-                                    <div class="form-group">
-                                       <label for="exampleInputEmail1">Adresse email</label>
-                                       <input type="email" name="email"  class="form-control" id="email" aria-describedby="emailHelp" placeholder="Entrer email">
-                                    </div>
-                                    <div class="form-group">
-                                       <label for="exampleInputEmail1">Mot de passe</label>
-                                       <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Entrer mot de passe">
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                       <p class="text-center">En accédant à votre compte <a type="button" href="#" data-toggle="modal" data-target="#myModal">vous acceptez nos conditions</a></p>
-                                    </div>
-                                    <div class="col-md-12 text-center ">
-                                       <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm" style="border-color:grey;background-color: #e20707;">Accéder au compte<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-unlock ml-4 mb-2" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd" d="M9.655 8H2.333c-.264 0-.398.068-.471.121a.73.73 0 0 0-.224.296 1.626 1.626 0 0 0-.138.59V14c0 .342.076.531.14.635.064.106.151.18.256.237a1.122 1.122 0 0 0 .436.127l.013.001h7.322c.264 0 .398-.068.471-.121a.73.73 0 0 0 .224-.296 1.627 1.627 0 0 0 .138-.59V9c0-.342-.076-.531-.14-.635a.658.658 0 0 0-.255-.237A1.122 1.122 0 0 0 9.655 8zm.012-1H2.333C.5 7 .5 9 .5 9v5c0 2 1.833 2 1.833 2h7.334c1.833 0 1.833-2 1.833-2V9c0-2-1.833-2-1.833-2zM8.5 4a3.5 3.5 0 1 1 7 0v3h-1V4a2.5 2.5 0 0 0-5 0v3h-1V4z"/>
-                                      </svg></button>
-                                    </div>
-                                    <div class="col-md-12 ">
-                                       <div class="login-or">
-                                          <hr class="hr-or">
-                                          
-                                       </div>
-                                    </div>
-                                    
-                                 </form>
-                              </div>
-                          </div>
-                          <div class="col-lg-6 d-none d-lg-inline-block">
-                              <div >
-                                  
-                                  <div class="account-testimonial">
-                                    <img width="500px" height="500px" src="https://i.ibb.co/yhkC6rD/logo.png" alt="logo" border="0" style="position:relative;">
-                                     
-                                  </div>
-                              </div>
-                              <div class="account-testimonial text-center">
-                            
-                            </div>
-                          </div>
-  
-                        
-                      </div>
-  
-                  </div>
-                
-              </div>
-           
-  
-              <p class="text-center mt-2 mb-2"><a href="/reclamation" class="text-primary ml-1">Mot de passe oublié ? </a>ou problème d'authentification?<a href="/reclamation" class="text-primary ml-1">Réclamer!</a></p>
-  
-            
-  
-          </div>
-   
-      </div>
-  
-  </div>
-</div>
+	<div class="section">
+		<div class="container">
+			<div class="row full-height justify-content-center">
+				<div class="col-12 text-center align-self-center py-5">
+					<div class="section pb-5 pt-5 pt-sm-2 text-center">
+						<h6 class="mb-0 pb-3"><span>Admin </span><span>Employé</span></h6>
+			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
+			          	<label for="reg-log"></label>
+						<div class="card-3d-wrap mx-auto">
+							<div class="card-3d-wrapper">
+								<div class="card-front">
+									<div class="center-wrap">
+										<div class="section text-center">
+											<h4 class="mb-4 pb-3">Admin Acces</h4>
+                      <form action="/" method = "POST" name="login">
+											<div class="form-group">
+												<input type="email" name="email" class="form-style" placeholder="Your Email Admin" id="email" aria-describedby="emailHelp">
+												<i class="input-icon uil uil-at"></i>
+											</div>	
+											<div class="form-group mt-2">
+												<input type="password" name="password" class="form-style" placeholder="Your Password Admin" id="password" autocomplete="off">
+												<i class="input-icon uil uil-lock-alt"></i>
+											</div>
+											<button type="submit" class="btn mt-4">Accéder au compte</button>
+                            				<p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                    </form>
+				      					</div>
+			      					</div>
+			      				</div>
+								<div class="card-back">
+									<div class="center-wrap">
+										<div class="section text-center">
+											<h4 class="mb-4 pb-3">Employé Acces</h4>
+                      <form action="/" method = "POST" name="login">
+                        <div class="form-group">
+                          <input type="email" name="email" class="form-style" placeholder="Your Email Employé" id="email" aria-describedby="emailHelp">
+                          <i class="input-icon uil uil-at"></i>
+                        </div>	
+                        <div class="form-group mt-2">
+                          <input type="password" name="password" class="form-style" placeholder="Your Password Employé" id="password" autocomplete="off">
+                          <i class="input-icon uil uil-lock-alt"></i>
+                        </div>
+                        <button type="submit" class="btn mt-4">Accéder au compte</button>
+                                      <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                      </form>
+				      					</div>
+			      					</div>
+			      				</div>
+			      			</div>
+			      		</div>
+			      	</div>
+		      	</div>
+	      	</div>
+	    </div>
+	</div>
 <script>
     $(document).ready(function(){
       $("#myBtn").click(function(){
