--- a/views/cuisConteneurs/index.ejs
+++ b/views/cuisConteneurs/index.ejs
@@ -21,14 +21,15 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-     }  </style>
-    <title>CuisTec - Cuisine Hospitalière</title>
+     }  
+     </style>
+    <title>Gestion des conteneurs </title>
     
 </head>
 <body style="background-color: #EBF2F8; padding-top: 100px; padding-bottom : 0px;">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 fixed-top">
-      <img width="95px" height="80px" src="https://i.ibb.co/yhkC6rD/logo.png" alt="logo" border="0" style="position:relative;">
+      <img width="95px" height="80px" src="" alt="logo"  style="position:relative;">
       <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,7 +47,7 @@
       </div>
     </nav>  
     
-    <h1 class="mb-4 text-center ">Fiche du patient</h1>
+    <h1 class="mb-4 text-center ">Fiche des conteneurs</h1>
    
   <div class="row mb-4">
     <div class="col">
@@ -72,7 +73,7 @@
             <path d="M4 0h5.5v1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h1V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
             <path d="M9.5 3V0L14 4.5h-3A1.5 1.5 0 0 1 9.5 3z"/>
             <path fill-rule="evenodd" d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
-          </svg>Nouveau patient
+          </svg>Nouveau conteneur
         </a>
         <button type="button" class="btn btn-warning  ml-2 " data-toggle="modal" data-target="#myModal">
           Instructions recherche<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-question-circle ml-2" viewBox="0 0 16 16">
@@ -107,41 +108,34 @@
       </div>
     </div>
     </div>
-  
-    <% cuisPatients.forEach( cuisPatient => { %>
-        <div class="card mt-2 mb-4 w-50 text-center mx-auto shadow">
-            <div class="card-body">
-               <h4 class="card-title">Nom patient : <%= cuisPatient.nomP %></h4> 
-               <div class="card-text mb-2">Prénom patient: <%= cuisPatient.prenomP %></div>
-               <div class="card-text mb-2">CIN: <%= cuisPatient.CIN %></div>
-               <div class="card-subtitle text-muted mb-2">Date création dossier: <%= cuisPatient.createdAt.toLocaleDateString() %></div>
-               <a href="/cuisPatients/<%= cuisPatient.id %>" class="btn btn-outline-primary">Plus d'infos<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle ml-2" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
-                <circle cx="8" cy="4.5" r="1"/>
-              </svg></a>
-               <form action="/cuisPatients/<%= cuisPatient.id %>?_method=DELETE" method="POST" class="d-inline" >
-                 <button type="submit" class="btn btn-danger">Supprimer<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash ml-2" viewBox="0 0 16 16">
-                  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                  <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                </svg></button>
-              </form>
-            </div>
-        </div>
-    <% }) %>
+    <section>
+  <div class="row">
+  <% cuisPatients.forEach( cuisPatient => { %>
+      <div class="col-sm-4 text-center mx-auto shadow" style="background-color: #f7f7f7;">
+          <div class="card-body ">
+             <h4 class="card-title">Type de conteneur : <%= cuisPatient.typeC %></h4> 
+             <div class="card-text mb-2">Prénom patient: <%= cuisPatient.prenomP %></div>
+             <div class="card-text mb-2">CIN: <%= cuisPatient.CIN %></div>
+             <div class="card-subtitle text-muted mb-2">Date création dossier: <%= cuisPatient.createdAt.toLocaleDateString() %></div>
+             <a href="/cuisPatients/<%= cuisPatient.id %>" class="btn btn-outline-primary">Plus d'infos<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle ml-2" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+              <circle cx="8" cy="4.5" r="1"/>
+            </svg></a>
+             <form action="/cuisPatients/<%= cuisPatient.id %>?_method=DELETE" method="POST" class="d-inline" >
+               <button type="submit" class="btn btn-danger">Supprimer<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash ml-2" viewBox="0 0 16 16">
+                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+              </svg></button>
+            </form>
+          </div>
+      </div>
+  <% }) %>
+</div>
+</section>
+   
   </div>
-    
-  <nav aria-label="breadcrumb " style ="bottom : 1000px" >
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/liste2/tout">Espace Prescription</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste3/tout">Dossiers patient</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste/tout">Stock</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste4/tout">Livret thérapeutique</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste6/tout">Fournisseurs</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste7/tout">Gestion de retours</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/liste5/tout">Commandes</a></li>
-    </ol>
-  </nav>
+  
   
   <script>
     $(document).ready(function(){
