--- a/views/cuisConteneurs/new.ejs
+++ b/views/cuisConteneurs/new.ejs
@@ -20,8 +20,9 @@
     <div class="inner">
       <img src="https://i.ibb.co/WHqt921/header-software-app.png" alt="" class="image-1">
   
-              <form class="form-card" action="/cuisPatients" method="POST">
+              <form class="form-card" action="/cuisConteneurs" method="POST">
                 <div class="form-style-5">
+				<h3>Nouveau conteneur</h3>
                 <%- include('_form_fields') %>
                 </div>
             </form>
