--- a/views/cuisConteneurs/edit.ejs
+++ b/views/cuisConteneurs/edit.ejs
@@ -6,15 +6,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
      crossorigin="anonymous">
+     <link rel="stylesheet" href="/css/style1.css">
+     <link rel="stylesheet" href="/css/style2.css">
+
     <title>Cuisine hospitalière</title>
 </head>
-<body>
-  <div class="container">
-      <h1 class="mb-4">Modifier patient</h1>
 
-      <form action="/cuisConteneurs/<%= cuisConteneur.id%>?_method=PUT" method="POST">
-        <%- include('_form_fields') %>
-    </form>
+<body >
+  <div class="wrapper">
+    <div class="inner">
+      <img src="https://i.ibb.co/WHqt921/header-software-app.png" alt="" class="image-1">
+  
+              <form class="form-card" action="/cuisConteneurs/<%= cuisConteneur.id%>?_method=PUT" method="POST">
+                <div class="form-style-5">
+				<h3>Modifier conteneur</h3>
+                <%- include('_form_fields') %>
+                </div>
+            </form>
+     <img src="/images/image-2.png" alt="" class="image-2">
+    </div>
   </div>
+  <script src="/js/jquery-3.3.1.min.js"></script>
+	<script src="/js/main.js"></script>
+    
 </body>
 </html>
