--- a/views/cuisConteneurs/show_admin.ejs
+++ b/views/cuisConteneurs/show_admin.ejs
@@ -35,6 +35,7 @@
         </ul>
       </div>
     </nav>
+	<%= modif %>
       <h1 class="mb-4">Type de conteneur: <%= cuisConteneur.typeC %></h1>
       <div class="text mb-2">
       Nombre: <%= cuisConteneur.nombreC %>
@@ -54,6 +55,9 @@
       </div>
       <div class="text-muted mb-2">
       Date de création du conteneur: <%= cuisConteneur.dateC.toLocaleDateString() %>
+      </div>
+	  <div class="text-muted mb-2">
+      Modif: <%= modif %>
       </div>
       <a href="/listeCt/tout" class="btn btn-secondary">
         Tous les conteneurs
