--- a/views/articles/login.ejs
+++ b/views/articles/login.ejs
@@ -314,13 +314,13 @@ h6 span{
 }
      </style>
     <link rel="icon" href="http://sendpictures.free.fr/up/1608041829.ico" />
-    <title>DAWA - GESTION DES DECHETS</title>
+    <title>GESTION DES DECHETS</title>
 </head>
 <body class="bg">
- 
-	<a href="#" class="logo" target="_blank">
-		<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
-	</a>
+  
+	<form method="get" action="/register" class="logo d-inline" >
+    <button type="submit" class="btn btn-primary" style="background-color:#001b48  ; color: #a9b1be;" >Inscription</button>
+  </form>
 
 	<div class="section">
 		<div class="container">
