--- a/views/Page0.ejs
+++ b/views/Page0.ejs
@@ -2216,10 +2216,10 @@ a:hover.back-to-top {
                         <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Gestion des conteneurs</a>
+                        <a class="nav-link page-scroll" href="#features">Ajouter un conteneur</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Ajouter un conteneur</a>
+                        <a class="nav-link page-scroll" href="#details">Gestion des conteneurs</a>
                     </li>
 
                    
@@ -2243,10 +2243,10 @@ a:hover.back-to-top {
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h1>Application gestion des déchets</h1>
+                            <h1>La gestion des déchets digitalsée</h1>
                             <p class="p-large">Hopitale de benguerir </p>
                             <a class="btn-solid-lg page-scroll mb-1" href="cuisConteneurs/new">Ajouter Un conteneur</a>
-                            <a class="btn-solid-lg page-scroll " href="/listeCt/tout">Consulter l'historie des modifications</a>
+                            <a class="btn-solid-lg page-scroll " href="/listeCt/tout">Gestion des conteneurs</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
