--- a/views/cuisConteneurs/new.ejs
+++ b/views/cuisConteneurs/new.ejs
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="/css/style1.css">
      <link rel="stylesheet" href="/css/style2.css">
 
-    <title>Cuisine hospitalière</title>
+    <title>Gestion des déchets </title>
 </head>
 <style type="text/css">
   
