--- a/views/cuisConteneurs/show_admin.ejs
+++ b/views/cuisConteneurs/show_admin.ejs
@@ -6,23 +6,46 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
      crossorigin="anonymous">
-    <title>Cuisine hospitalière</title>
+    
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="icon" href="http://sendpictures.free.fr/up/1608041829.ico" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <title>Gestion des dechets </title>
+    <style>
+      .btn-outline-sm {
+	display: inline-block;
+	padding: 0.875rem 1.5rem 0.875rem 1.5rem;
+	border: 0.125rem solid #ffffff;
+	border-radius: 2rem;
+	background-color: transparent;
+	color: #ffffff;
+	font: 700 0.875rem/0 "Open Sans", sans-serif;
+	text-decoration: none;
+	transition: all 0.2s;
+}
+
+.btn-outline-sm:hover {
+	background-color: #5f4dee;
+	color: #fff;
+	text-decoration: none;
+}
+    </style>
 </head>
-<body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="#">CuisTec</a>
+<body style="background-color: #cbc6ee; padding-bottom : 0px;">
+  
+    <nav class="navbar navbar-expand-lg navbar-dark  mb-4" style="background-color: #7c6df0;">
+      <a class="navbar-brand" href="#">GestDéchets</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse ml-4" style="float: right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/Page2">Page d'accueil<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">Login</a>
+            <a class="nav-link" href="/Page0">Page d'accueil<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/register">Register</a>
@@ -33,9 +56,17 @@
             <a class="nav-link disabled" href="#">A propos de l'application Web</a>
           </li>
         </ul>
+        <span class="nav-item">
+          <form action="/logout?_method=DELETE" method="POST">
+          <button type="submit" class="btn-outline-sm">LOGOUT</button>
+          </form>
+        </span>
       </div>
     </nav>
-	<%= modif %>
+    <div class="container">  
+	  <div class="row">
+     <!-- <div class="col-sm-4">
+           
       <h1 class="mb-4">Type de conteneur: <%= cuisConteneur.typeC %></h1>
       <div class="text mb-2">
       Nombre: <%= cuisConteneur.nombreC %>
@@ -57,15 +88,83 @@
       Date de création du conteneur: <%= cuisConteneur.dateC.toLocaleDateString() %>
       </div>
 	  <div class="text-muted mb-2">
-      Modif: <%= modif %>
+     
       </div>
       <a href="/listeCt/tout" class="btn btn-secondary">
         Tous les conteneurs
-      </a>
-      <a href="/cuisConteneurs/edit/<%= cuisConteneur.id %>" class="btn btn-info">
+      </a>-->
+      <!--<a href="/cuisConteneurs/edit/<%= cuisConteneur.id %>" class="btn btn-info">
 
         Modifier
+      </a>-->
+      <!--</div>-->
+      <div class="col">
+         <!--<%= modif%>-->
+         <div class="container d-flex justify-content-center mt-50 mb-50">
+          <div class="">
+              <div class="card-header header-elements-inline">
+                  <h5 class="card-title">Histoire de modification au niveau du conteneur<span style="font-weight: bold ;"> <%= cuisConteneur.typeC %></span> </h5>
+                 
+              </div>
+              <div class="table-responsive">
+                  <table class="table table-hover" data-search="true">
+                      <thead>
+                          <tr>
+                              <th>User</th>
+                              <th>date de modification</th>
+                              <th>champs modifié </th>
+                              <th>Ancienne valeur</th>
+                              <th>nouvelle valeur</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                        <% modif.forEach( modif => { %>
+                          <tr>
+                              <td><%= modif.user %></td>
+                              <td><%= modif.date %></td>
+
+                              <% if( modif.key == 'typeC'){ %>
+                                <td>Type de conteneur</td>
+                                <% } else if (modif.key == 'nombreC'){ %> 
+                              <td>nombre de conteneur</td>
+                              <% } else if (modif.key == 'dateC'){ %> 
+                                <td>date de pesage</td>
+                              <% } else if (modif.key == 'montantC'){ %> 
+                                <td>montant facturé</td>
+                              <% } else if (modif.key == 'cautionC'){ %> 
+                                <td>caution</td>
+                              <% } else if (modif.key == 'poidsC'){ %> 
+                                <td>poids de déchets</td>
+                              <% } else if (modif.key == 'commentaireC'){ %> 
+                                <td>commentaire</td>
+                              <% } %>
+
+                              <td><%= modif.old %></td>
+                              <td><%= modif.new %></td>
+                          </tr>
+                   
+                          <% }) %>
+                          
+                      </tbody>
+                  </table> 
+                  
+                
+              </div>
+             
+          </div>
+          
+      </div>
+      
+      </div>
+      
+    </div>
+    <div class="mt-2">
+      <a href="/listeCt/tout" class="btn btn-secondary">
+        Tous les conteneurs
       </a>
+    </div>
+    
   </div>
+  
 </body>
 </html>
