--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,34 +6,53 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
      crossorigin="anonymous">
-     <link rel="icon" href="http://sendpictures.free.fr/up/1608041829.ico" />
-     <title>DAWA - Pharmacie Hospitalière</title>
-</head>
-<body style="background-color: #EBF2F8; padding-top: 100px; padding-bottom : 0px;">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 fixed-top">
-      <img width="95px" height="80px" src="https://i.ibb.co/yhkC6rD/logo.png" alt="logo" border="0" style="position:relative;">
-      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
-      <div class="collapse navbar-collapse ml-4" style="float: right" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/Page0">Page d'accueil<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/register">Enregistrer utilisateur</a>
-          </li>
-          
-          
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">A propos de l'application Web</a>
-          </li>
-        </ul>
-        
-      </div>
-    </nav>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="icon" href="http://sendpictures.free.fr/up/1608041829.ico" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+      
+ 
+    <style> .bg {
+      /* The image used */
+      background-image: url("https://i.ibb.co/fGT2y3T/bleu-pastel-clair.jpg"); 
+      
+      /* Full height */
+      height: 100%;
+     
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+     }  
+     </style>
+     <title>Gestion des comptes</title>
+</head>
+<body style="background-color: #cbc6ee; padding-bottom : 0px;">
+  <nav class="navbar navbar-expand-lg navbar-dark mb-4 " style="background-color: #7c6df0;">
+
+    <img width="95px" height="80px" src="https://i.ibb.co/HxYPqwp/logo.png" alt="logo"  style="position:relative;">
+
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse ml-4" style="float: right" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/Page0">Page d'accueil<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">A propos de l'application Web</a>
+        </li>
+      </ul>
+      
+    </div>
+  </nav>  
+  <div class="container">
       <h1 class="mb-4 text-center">Utilisateurs</h1>
     <div class="row mb-4">
       <div class="col">
@@ -53,7 +72,7 @@
         </form>
       </div>
     </div>
-    <% users.forEach( user => { %>  
+    <!--<% users.forEach( user => { %>  
         <div class="card mt-2 mb-4 w-50 text-center mx-auto shadow">
             <div class="card-body">
                <h4 class="card-title">Nom: <%= user.name %></h4> 
@@ -70,7 +89,50 @@
               </form>
             </div>
         </div>
-    <% }) %>
+    <% }) %>-->
+	<div class="row">
+    <div class="table-responsive">
+      <table class="table table-hover">
+          <thead>
+              <tr>
+                 <th class="text-center">Nom</th>
+                  <th class="text-center">Rôle</th>
+                  <th class="text-center">Email</th>
+                  
+              </tr>
+          </thead>
+          <tbody>
+            <% users.forEach( user => { %>
+              <tr>
+                <td class="text-center"><%= user.name %></td>
+                  <td class="text-center"><%= user.role %></td>
+                  <td><%= user.email %></td>
+                  
+                 
+                  <td class="td-actions text-right">
+				  <% if(! user.active ) {%>
+                    <form method="post" action="/users/activate/<%= user.id %>" class="d-inline" >
+                      <button type="submit" rel="tooltip" class="btn btn-info btn-just-icon btn-sm" data-original-title="" title="">
+                          <i class="material-icons">done</i>
+                      </button>
+                    </form>
+				 <%}%>
+                    <form method="get" action="/users/edit/<%= user.id %>" class="d-inline">
+                      <button type="submit" rel="tooltip" class="btn btn-success btn-just-icon btn-sm" data-original-title="" title="">
+                          <i class="material-icons">edit</i>
+                      </button>
+                    </form>
+                    <form action="/users/<%= user.id %>?_method=DELETE" method="POST" class="d-inline" >
+                      <button type="submit" rel="tooltip" class="btn btn-danger btn-just-icon btn-sm" data-original-title="" title="">
+                          <i class="material-icons">close</i>
+                      </button>
+                    </form>
+                  </td>
+              </tr>
+              <% }) %>
+          </tbody>
+      </table>
+      </div>
   </div>
   <nav aria-label="breadcrumb " style ="bottom : 1000px" >
     <ol class="breadcrumb">
